<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"


        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"


        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:title="Notifications"

        app:titleTextColor="@android:color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentConstraintLayoutOfNotifications"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="@id/guidelineB"
        app:layout_constraintEnd_toStartOf="@id/guidelineR"
        app:layout_constraintStart_toStartOf="@id/guidelineL"
        app:layout_constraintTop_toBottomOf="@id/toolbar">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_search"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_search_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Alert query term" />
        </com.google.android.material.textfield.TextInputLayout>

        <include
            android:id="@+id/checkBoxs"
            layout="@layout/check_boxs_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/input_search" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"

            android:layout_marginTop="10dp"


            android:background="@android:color/darker_gray"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxs" />

        <Switch
            android:id="@+id/enable_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Alerte désactivée"

            app:layout_constraintTop_toBottomOf="@id/divider"
            tools:ignore="HardcodedText" />


        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"

            android:layout_marginTop="10dp"


            android:background="@android:color/darker_gray"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enable_notifications" />

        <Switch
            android:id="@+id/switchFrequencemode"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            app:layout_constraintTop_toBottomOf="@id/enable_notifications" />

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"

            android:layout_marginTop="10dp"


            android:background="@android:color/darker_gray"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switchFrequencemode" />

        <TextView
            android:id="@+id/timeSettingTextViewNotificationHour"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="heure                   des notifications"


            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/divider3"
            app:layout_constraintWidth_percent="0.3"
            tools:ignore="HardcodedText" />

        <NumberPicker
            android:id="@+id/numberPickerNotificationHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"

            app:layout_constraintEnd_toEndOf="@+id/timeSettingTextViewNotificationHour"
            app:layout_constraintStart_toStartOf="@+id/timeSettingTextViewNotificationHour"
            app:layout_constraintTop_toBottomOf="@+id/timeSettingTextViewNotificationHour" />

        <TextView
            android:id="@+id/timeSettingTextViewUnityFrequence"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Fréquence                                des                       nofications"


            app:layout_constraintEnd_toStartOf="@id/timeSettingTextViewTypeFrequence"

            app:layout_constraintStart_toEndOf="@id/timeSettingTextViewNotificationHour"
            app:layout_constraintTop_toBottomOf="@id/divider3"
            app:layout_constraintWidth_percent="0.3"

            />

        <NumberPicker
            android:id="@+id/numberPickerUnityFrequence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"

            app:layout_constraintEnd_toEndOf="@id/timeSettingTextViewUnityFrequence"
            app:layout_constraintStart_toStartOf="@id/timeSettingTextViewUnityFrequence"
            app:layout_constraintTop_toBottomOf="@id/timeSettingTextViewUnityFrequence" />

        <TextView
            android:id="@+id/timeSettingTextViewTypeFrequence"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Unité                           de                 Fréquence"


            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toEndOf="@id/timeSettingTextViewUnityFrequence"
            app:layout_constraintTop_toBottomOf="@id/divider3"
            app:layout_constraintWidth_percent="0.3"
            tools:ignore="HardcodedText" />

        <NumberPicker
            android:id="@+id/numberPickeTypeFrequence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"

            app:layout_constraintEnd_toEndOf="@id/timeSettingTextViewTypeFrequence"
            app:layout_constraintStart_toStartOf="@id/timeSettingTextViewTypeFrequence"
            app:layout_constraintTop_toBottomOf="@id/timeSettingTextViewTypeFrequence" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />


</androidx.constraintlayout.widget.ConstraintLayout>





