<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_name"
        android:menuCategory="secondary"
        android:orderInCategory="1"
        android:title="a"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuNotifications"
        android:title="Notification"
        tools:ignore="HardcodedText" />


</menu>